--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 $c-white: #fff;
 $c-black: #000;
+$c-water-green: #048eab;
 
 //FONT
 .c-white {
@@ -8,6 +9,9 @@ $c-black: #000;
 .c-black {
     color: $c-black !important;
 }
+.c-water-green {
+    color: $c-water-green !important;
+}
 
 //BACKGROUND
 .bg-white {
@@ -15,6 +19,9 @@ $c-black: #000;
 }
 .bg-black {
     background-color: $c-black !important;
+}
+.bg-water-green {
+    background-color: $c-water-green !important;
 }
 
 @mixin bg-opacity($color, $opacity) {
