--- a/src/styles/_override-ionic.scss
+++ b/src/styles/_override-ionic.scss
@@ -16,12 +16,18 @@
 //////////////////////////////////////////////////////////////
 
 :root {
+    ion-header {
+        &:after {
+            display: none !important;
+        }
+    }
+
     ion-toolbar {
         --padding-start: 0 !important;
         --padding-end: 0 !important;
         --padding-top: 0 !important;
         --padding-bottom: 0 !important;
-        --min-height: auto !important;
+        --min-height: #{$ion-toolbar-height} !important;
 
         ion-title {
             padding-inline-start: 0 !important;
