--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,6 @@
 //LAYOUT AND COMPONENTS VARIABLES
     //Override ionic components
 $ion-toolbar-height: 5.6rem;
+$ion-toolbar-background-color: $c-water-green;
 
     //Custom enology components
