--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu swipeGesture="false">
+    <ion-menu swipeGesture="false" class="ar-menu">
       <ion-header>
-        <ion-toolbar>
+        <ion-toolbar class="ar-toolbar">
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
