--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,9 @@
 
 //LAYOUT AND COMPONENTS VARIABLES
     //Override ionic components
-$ion-toolbar-height: 5.6rem;
-$ion-toolbar-background-color: $c-water-green;
-
+    
     //Custom enology components
+$ar-toolbar-height: 5.6rem;
+$ar-toolbar-background-color: $c-water-green;
+$ar-buttons-background-color: $c-light-grey-e0;
+$ar-menu-toolbar-background-color: $c-light-grey-e0;
