--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,8 @@
 $c-white: #fff;
 $c-black: #000;
 $c-water-green: #048eab;
+$c-grey: #b7b7b7;
+$c-light-grey-e0: #e0e0e0;
 
 //FONT
 .c-white {
@@ -12,6 +14,12 @@ $c-water-green: #048eab;
 .c-water-green {
     color: $c-water-green !important;
 }
+.c-grey {
+    color: $c-grey !important;
+}
+.c-light-grey-e0 {
+    color: $c-light-grey-e0;
+}
 
 //BACKGROUND
 .bg-white {
@@ -22,6 +30,12 @@ $c-water-green: #048eab;
 }
 .bg-water-green {
     background-color: $c-water-green !important;
+}
+.bg-grey {
+    background-color: $c-grey !important;
+}
+.bg-light-grey-e0 {
+    background-color: $c-light-grey-e0;
 }
 
 @mixin bg-opacity($color, $opacity) {
