--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,15 @@
     <ion-menu swipeGesture="false" class="ar-menu">
       <ion-header>
         <ion-toolbar class="ar-toolbar">
-          <ion-title>Menu</ion-title>
+          <ion-icon name="armarker" class="logo c-water-green"></ion-icon>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerLink]="p.url" [routerDirection]="p.direction">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
+              <ion-icon slot="start" [name]="p.icon" class="f-24 c-grey"></ion-icon>
+              <ion-label class="c-grey">
                 {{p.title}}
               </ion-label>
             </ion-item>
