--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,7 +1,8 @@
 $c-white: #fff;
 $c-black: #000;
 $c-water-green: #048eab;
-$c-grey: #b7b7b7;
+$c-grey: #777;
+$c-light-grey-b7: #b7b7b7;
 $c-light-grey-e0: #e0e0e0;
 
 //FONT
