--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,4 +12,4 @@ $ar-menu-button-color: $c-grey;
 $ar-menu-toolbar-background-color: $c-light-grey-e0;
 $ar-menu-logo-size: 4rem;
 $ar-menu-content-padding: 1.6rem;
-$ar-menu-item-border: 1px solid $c-grey;
+$ar-menu-item-border: 1px solid $c-light-grey-b7;
