--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,9 +7,14 @@
     //Custom enology components
 $ar-toolbar-height: 5.6rem;
 $ar-toolbar-background-color: $c-water-green;
+
 $ar-buttons-background-color: $c-light-grey-e0;
+
 $ar-menu-button-color: $c-grey;
 $ar-menu-toolbar-background-color: $c-light-grey-e0;
 $ar-menu-logo-size: 4rem;
 $ar-menu-content-padding: 1.6rem;
 $ar-menu-item-border: 1px solid $c-light-grey-b7;
+
+$menu-overlay-opacity: .5;
+$menu-overlay-opacity-time: .3s;
