--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,7 @@
     //Override ionic components
     
     //Custom enology components
-$ar-toolbar-height: 5.6rem;
+$ar-toolbar-height: 56px;
 $ar-toolbar-background-color: $c-water-green;
 
 $ar-buttons-background-color: $c-light-grey-e0;
