--- a/src/global.scss
+++ b/src/global.scss
@@ -10,4 +10,12 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
+//Import roboto font
+@import 'assets/fonts/roboto/css/roboto-condensed/roboto-condensed-fontface.css';
+@import 'assets/fonts/roboto/css/roboto-slab/roboto-slab-fontface.css';
+@import 'assets/fonts/roboto/css/roboto/roboto-fontface.css';
+
+//Import josefin font
+@import 'assets/fonts/josefin/index.css';
+
 @import 'styles/index';
