--- a/src/pages/augmented-reality/augmented-reality.page.scss
+++ b/src/pages/augmented-reality/augmented-reality.page.scss
@@ -28,4 +28,27 @@ ion-header {
 
 ion-content {
     --background: transparent !important;
+
+    .spotContainer {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        & > span {
+            text-align: center;
+            display: inline-block;
+            width: 5rem;
+            height: 5rem;
+            position: absolute;
+            left: 0;
+
+            img {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
 }
