--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerLink]="p.url" [routerDirection]="p.direction" routerLinkActive="active">
               <ion-icon slot="start" [name]="p.icon" class="f-24"></ion-icon>
-              <ion-label>
+              <ion-label class="f-family-josefin">
                 {{p.title}}
               </ion-label>
             </ion-item>
