--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,13 +8,15 @@
 $ar-toolbar-height: 56px;
 $ar-toolbar-background-color: $c-water-green;
 
-$ar-buttons-background-color: $c-light-grey-e0;
+$ar-buttons-background-color: $c-light-grey-c0;
 
 $ar-menu-button-color: $c-grey;
-$ar-menu-toolbar-background-color: $c-light-grey-e0;
+$ar-menu-toolbar-background-color: $c-light-grey-c0;
 $ar-menu-logo-size: 4rem;
 $ar-menu-content-padding: 1.6rem;
 $ar-menu-item-border: 1px solid $c-light-grey-b7;
+
+$ar-content-background-color: $c-light-grey-f1;
 
 $menu-overlay-opacity: .5;
 $menu-overlay-opacity-time: .3s;
