--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,5 +18,7 @@ $ar-menu-item-border: 1px solid $c-light-grey-b7;
 
 $ar-content-background-color: $c-light-grey-f1;
 
+$ar-spinner-side: 4rem;
+
 $menu-overlay-opacity: .5;
 $menu-overlay-opacity-time: .3s;
