--- a/src/pages/augmented-reality/augmented-reality.page.scss
+++ b/src/pages/augmented-reality/augmented-reality.page.scss
@@ -14,6 +14,7 @@ ion-header {
 
         ion-buttons {
             background-color: transparent !important;
+            background-image: none !important;
 
             ion-back-button {
                 width: 100% !important;
@@ -36,18 +37,50 @@ ion-content {
         top: 0;
         left: 0;
 
-        & > span {
+        div.marker {
             text-align: center;
-            display: inline-block;
-            width: 5rem;
-            height: 5rem;
+            //display: inline-block;
+            width: auto;
+            height: auto;
             position: absolute;
             left: 0;
 
-            img {
+            & > span {
                 display: inline-block;
-                width: 100%;
-                height: 100%;
+
+                &:first-child {
+                    width: 5rem;
+                    height: auto;
+    
+                    img {
+                        display: inline-block;
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+
+                &:last-child {
+                    width: 100%;
+                    margin-top: 1rem;
+                }
+            }
+
+        }
+    }
+
+    .spotDetails {
+        width: 100%;
+        height: 30%;
+        padding: 1.6rem 2.8rem 2.4rem;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+
+        & > span {
+            display: block;
+
+            &:last-child {
+                line-height: 2.4rem;
             }
         }
     }
