--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,9 @@
 
 //LAYOUT AND COMPONENTS VARIABLES
     //Override ionic components
-    
+$ion-back-button-icon-color: $c-white;
+$ion-back-button-icon-font-size: 1.8rem;
+
     //Custom enology components
 $ar-toolbar-height: 56px;
 $ar-toolbar-background-color: $c-water-green;
