Ionic spinner customization with workaround replaced with custom component + redux controller

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,6 +20,7 @@ $ar-menu-item-border: 1px solid $c-light-grey-b7;
 
 $ar-content-background-color: $c-light-grey-f1;
 
+$ar-spinner-background-color: $c-black-32;
 $ar-spinner-side: 4rem;
 
 $menu-overlay-opacity: .5;
