--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 $c-white: #fff;
 $c-black: #000;
+$c-black-32: rgba(0, 0, 0, .32);
 $c-water-green: #048eab;
 $c-grey: #777;
 $c-light-grey-b7: #b7b7b7;
