--- a/src/components/spinner/spinner.component.scss
+++ b/src/components/spinner/spinner.component.scss
@@ -10,14 +10,12 @@ ion-content {
     z-index: 10000;
     
     .horizontal-centering-container {
-        text-align: center;
-        width: 100%;
-        @include vertical-align-transform(absolute);
+        @include vertical-centering-transform(absolute);
+        @include horizontal-centering-container('.loading-element');
         left: 0;
     }
 
     .loading-element {
-        display: inline-block;
         width: $ar-spinner-side;
         height: $ar-spinner-side;
         background-color: $c-water-green;
