Toast service added

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,5 +23,8 @@ $ar-content-background-color: $c-light-grey-f1;
 $ar-spinner-background-color: $c-black-32;
 $ar-spinner-side: 4rem;
 
+$ar-error-toast-background-color: $c-grey;
+$ar-success-toast-background-color: $c-water-green;
+
 $menu-overlay-opacity: .5;
 $menu-overlay-opacity-time: .3s;
