--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $ion-back-button-icon-font-size: 1.8rem;
 
     //Custom enology components
 $ar-toolbar-height: 56px;
+$ar-toolbar-height-small-mobile: 48px;
 $ar-toolbar-background-color: $c-water-green;
 
 $ar-buttons-background-color: $c-light-grey-c0;
@@ -15,6 +16,7 @@ $ar-buttons-background-color: $c-light-grey-c0;
 $ar-menu-button-color: $c-grey;
 $ar-menu-toolbar-background-color: $c-light-grey-c0;
 $ar-menu-logo-size: 4rem;
+$ar-menu-logo-size-small-mobile: 3.6rem;
 $ar-menu-content-padding: 1.6rem;
 $ar-menu-item-border: 1px solid $c-light-grey-b7;
 
