--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,5 +25,8 @@ $ar-spinner-side: 4rem;
 $ar-error-toast-background-color: $c-grey;
 $ar-success-toast-background-color: $c-water-green;
 
+$ar-fab-button-background-color: $c-water-green;
+$ar-fab-button-color: $c-white;
+
 $menu-overlay-opacity: .5;
 $menu-overlay-opacity-time: .3s;
