--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<ng-container *ngIf="(splashState$ | async) as splashState">
+  <splash *ngIf="splashState !== 'inactive'"></splash>
+</ng-container>
+
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
