--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,13 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+//Import roboto font
+@import 'assets/fonts/roboto/css/roboto-condensed/roboto-condensed-fontface.css';
+@import 'assets/fonts/roboto/css/roboto-slab/roboto-slab-fontface.css';
+@import 'assets/fonts/roboto/css/roboto/roboto-fontface.css';
+
+//Import josefin font
+@import 'assets/fonts/josefin/index.css';
 
 //Import custom libraries styles
   //Override some ionic components
