--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,6 @@
 @import 'colors';
 
 //Put here common app variables
+$ar-spinner-background-color: $c-black-32;
+$ar-spinner-side: 4rem;
+$ar-spinner-color: $c-water-green;
